# abgeordnetenwatch-python

./: .gitignore  README.md  README_de.md  pyproject.toml  requirements.txt  run.sh
abgeordnetenwatch_python/: cache.py  main.py  questions_answers.py  test.py
abgeordnetenwatch_python/cli/: convert_qa.py  load_parliament_qa.py  load_questions_answers.py
abgeordnetenwatch_python/models/: candidacy_mandate.py  parliament.py  parliament_period.py  party.py  politician_dossier.py  politicians.py  questions_answers.py
abgeordnetenwatch_python/questions_answers/: __init__.py  load_qa.py  models.py
notes/: short_examples.txt  todo.md
src/: candidacy_mandate.py  load_parliament_qa.py  load_questions_answers.py  main.py  parliament.py  parliament_period.py  party.py  politicans.py  politicians.py  test.py  utils.py
test_scripts/: load_all.sh  main.py  search-name.py  test.py
